exports[`Footer Snapshot Test > react > test case common to both #0`] = `
<footer class="bg-light-grey font-sans antialiased" data-id="footer">
  <div
    class="max-w-screen-xl mx-auto py-32 sm:py-40 lg:py-64 ui-grid-gap ui-grid-px grid grid-cols-6"
  >
    <div class="col-span-full lg:col-span-2">
      <div class="flex flex-row p-menu-row-snug">
        <img
          class="mr-24 -mt-16"
          src="/assets/ably_ui/core/images/ably-stack-f942defb86ef288e999c451c1f7e34fbbe59b7200d738c080e15a9f8716bbdad.svg"
          alt="Ably homepage"
        />
        <h2
          class="text-overline2 col-span-full font-medium uppercase tracking-widen-0.1"
        >
          The Ably Platform
        </h2>
      </div>
      <div class="grid grid-cols-4 lg:col-span-2">
        <p class="text-p3 py-16 font-medium p-menu-row-snug col-span-3">
          Easily power any realtime experience in your application via a simple
          API that handles everything realtime.
        </p>
      </div>
      <ul
        class="grid xs:grid-cols-2 gap-x-8 md:gap-x-24 xl:gap-x-32 md:grid-cols-1"
      >
        <li class="p-menu-row-snug">
          <a href="/pub-sub-messaging" class="ui-footer-menu-row-link"
            >Pub/sub messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/push-notifications" class="ui-footer-menu-row-link"
            >Push notifications</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/integrations" class="ui-footer-menu-row-link"
            >Third-party integrations</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/protocols" class="ui-footer-menu-row-link"
            >Multiple protocol messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/hub" class="ui-footer-menu-row-link"
            >Streaming data sources</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">Ably is for</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/solutions/asset-tracking" class="ui-footer-menu-row-link"
            >Ably Asset Tracking</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/extend-kafka-to-the-edge"
            class="ui-footer-menu-row-link"
            >Extend Kafka to the edge</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/edtech" class="ui-footer-menu-row-link">EdTech</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/automotive-logistics-and-mobility"
            class="ui-footer-menu-row-link"
            >Automotive, Logistics, &amp; Mobility</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/b2b-platforms" class="ui-footer-menu-row-link"
            >B2B Platforms</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/healthcare" class="ui-footer-menu-row-link"
            >Healthcare</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/hub" class="ui-footer-menu-row-link"
            >Streaming data sources</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/ecommerce-and-retail"
            class="ui-footer-menu-row-link"
            >eCommerce &amp; Retail</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/sports-and-media" class="ui-footer-menu-row-link"
            >Sports &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/gaming" class="ui-footer-menu-row-link">Gaming</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/iot-and-connected-devices"
            class="ui-footer-menu-row-link"
            >IoT &amp; Connected Devices</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">Developers</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/docs/quick-start-guide" class="ui-footer-menu-row-link"
            >Start in 5 minutes</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/docs/" class="ui-footer-menu-row-link">Documentation</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/tutorials" class="ui-footer-menu-row-link">Tutorials</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="https://changelog.ably.com/" class="ui-footer-menu-row-link"
            >Changelog</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/support" class="ui-footer-menu-row-link"
            >Support &amp; FAQs</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/download" class="ui-footer-menu-row-link">SDKs</a>
        </li>
        <li class="p-menu-row-snug flex items-center">
          <a
            class="pr-8 ui-footer-menu-row-link"
            href="https://status.ably.com/"
            >System status</a
          ><iframe
            class="w-24 h-24 mt-4"
            src="https://status.ably.com/embed/icon"
            allowtransparency="true"
            frameborder="0"
            scrolling="no"
            title="System Status"
          ></iframe>
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">WHY ABLY</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/customers" class="ui-footer-menu-row-link">Customers</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/case-studies" class="ui-footer-menu-row-link"
            >Case Studies</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/four-pillars-of-dependability"
            class="ui-footer-menu-row-link"
            >Four Pillars of Dependability</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/compare" class="ui-footer-menu-row-link"
            >Compare our tech</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/protocols" class="ui-footer-menu-row-link"
            >Multi protocol support</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/integrations" class="ui-footer-menu-row-link"
            >Third-party integrations</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">ABOUT</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/about" class="ui-footer-menu-row-link">About Ably</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/pricing" class="ui-footer-menu-row-link">Pricing</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/blog" class="ui-footer-menu-row-link">Blog</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/careers" class="ui-footer-menu-row-link">Careers</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/open-policy" class="ui-footer-menu-row-link"
            >Open protocol policy</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/press-center" class="ui-footer-menu-row-link"
            >Press &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/contact" class="ui-footer-menu-row-link">Contact us</a>
        </li>
      </ul>
    </div>
  </div>
  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>
  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 grid ui-grid-gap ui-grid-px sm:grid-cols-2"
  >
    <div class="">
      <div
        class="flex flex-col lg:flex-row flex-auto ml-8 sm:col-span-1 lg:col-span-2"
      >
        <div class="">
          <div class="flex items-center pb-24">
            <a
              class="h-24 pr-24 text-cool-black hover:text-icon-twitter"
              href="https://twitter.com/ablyrealtime"
              title="Ably on Twitter"
              ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
                <use xlink:href="#sprite-twitter"></use></svg></a
            ><a
              class="h-24 pr-24 text-cool-black hover:text-icon-linkedin"
              href="https://www.linkedin.com/company/ably-realtime"
              title="Ably on LinkedIn"
              ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
                <use xlink:href="#sprite-linkedin"></use></svg></a
            ><a
              class="h-24 pr-24 text-cool-black hover:text-icon-github"
              href="https://github.com/ably/"
              title="Ably on Github"
              ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
                <use xlink:href="#sprite-github"></use></svg></a
            ><a
              class="h-24 pr-24 text-cool-black hover:text-icon-discord"
              href="https://discord.gg/jwBPhEZ9g5"
              title="Ably on Discord"
              ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
                <use xlink:href="#sprite-discord"></use></svg
            ></a>
          </div>
        </div>
        <div class="xs:hidden sm:block ui-footer-glassdoor">
          <div
            class="flex sm:pt-24 lg:pt-0 sm:border-t sm:border-l-0 lg:border-t-0 lg:border-l sm:border-mid-grey sm:w-3/4 lg:w-full lg:pl-24"
          >
            <a
              href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
              class="h-24 text-cool-black hover:text-icon-glassdoor"
              title="Ably reviews on glassdoor"
              ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
                <use xlink:href="#sprite-glassdoor"></use></svg
            ></a>
            <div class="pl-16 text-menu3 font-light">
              <strong class="block font-medium">We're hiring!</strong
              ><a
                href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
                class="ui-footer-link"
                >Learn more at Glassdoor</a
              >
            </div>
          </div>
        </div>
      </div>
      <div class="xs:block sm:hidden">
        <div class="border-t border-mid-grey w-full"></div>
        <div class="flex py-24">
          <a
            class="h-24 pr-24 text-cool-black hover:text-icon-glassdoor"
            href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
            title="Ably reviews on glassdoor"
            ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
              <use xlink:href="#sprite-glassdoor"></use></svg
          ></a>
          <div class="text-menu3 font-light">
            <strong class="block font-medium">We're hiring!</strong
            ><a
              href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
              class="ui-footer-link"
              >Learn more at Glassdoor</a
            >
          </div>
        </div>
      </div>
    </div>
    <div class="col-span-full sm:col-span-1 inline-flex sm:ml-auto">
      <img
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/highest-user-adoption-2022-b3cbeb5fa43cab3c21df256f644f88bf16b628b2ff4f04e54b5c9ef0260dd315.png"
        alt="Highest User Adoption 2022"
      /><img
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/users-love-us-2022-1c82775859c473f3e7a2faade55ffade3d9fd78d522f3e15ef2f4aa843f07ada.png"
        alt="Users Love Us"
      /><img
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/high-performer-2022-eae68980f68e8fc65a310e6ca80cee47c4e92e039bb2feb036f713ea9b9839b2.png"
        alt="High Performer 2022"
      />
    </div>
  </div>
  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>
  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 md:grid md:grid-cols-2 ui-grid-gap ui-grid-px "
  >
    <div class="flex flex-col flex-auto pb-40 ml-8 col-span-full md:col-span-1">
      <div class="inline-flex">
        <a href="/privacy" class="pr-24 ui-footer-link">Cookies</a
        ><a href="/legals" class="pr-24 ui-footer-link">Legals</a
        ><a href="/data-protection" class="pr-24 ui-footer-link"
          >Data Protection</a
        ><a href="/privacy" class="ui-footer-link">Privacy</a>
      </div>
    </div>
    <div class="xs:grid xs:grid-cols-2 sm:grid-cols-4 xs:pl-16 md:pl-0 ">
      <div class="flex mr-24">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem;"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">SOC 2 Type 2</p>
          <p class="ui-footer-compliance-text font-light mb-24">Certified</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-2">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem;"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">HIPAA</p>
          <p class="ui-footer-compliance-text font-light mb-24">Compliant</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-3">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem;"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">EU GDPR</p>
          <p class="ui-footer-compliance-text font-light mb-24">Certified</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-4">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem;"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">256-bit AES</p>
          <p class="ui-footer-compliance-text font-light mb-24">Encryption</p>
        </div>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer Snapshot Test > view component > test case common to both #0`] = `
<footer class="bg-light-grey font-sans antialiased" data-id="footer">
  <div
    class="max-w-screen-xl mx-auto py-32 sm:py-40 lg:py-64 ui-grid-gap ui-grid-px grid grid-cols-6"
  >
    <div class="col-span-full lg:col-span-2">
      <div class="flex flex-row p-menu-row-snug">
        <img
          alt="Ably homepage"
          class="mr-24 -mt-16"
          src="/assets/ably_ui/core/images/ably-stack-f942defb86ef288e999c451c1f7e34fbbe59b7200d738c080e15a9f8716bbdad.svg"
        />
        <h2
          class="text-overline2 col-span-full font-medium uppercase tracking-widen-0.1"
        >
          The Ably Platform
        </h2>
      </div>
      <div class="grid grid-cols-4 lg:col-span-2">
        <p class="text-p3 py-16 font-medium p-menu-row-snug col-span-3">
          Easily power any realtime experience in your application via a simple
          API that handles everything realtime.
        </p>
      </div>
      <ul
        class="grid xs:grid-cols-2 gap-x-8 md:gap-x-24 xl:gap-x-32 md:grid-cols-1"
      >
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/pub-sub-messaging"
            >Pub/sub messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/push-notifications"
            >Push notifications</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/integrations"
            >Third-party integrations</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/protocols"
            >Multiple protocol messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/hub"
            >Streaming data sources</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">Ably is for</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/asset-tracking"
            >Ably Asset Tracking</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/extend-kafka-to-the-edge"
            >Extend Kafka to the edge</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/edtech">EdTech</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/automotive-logistics-and-mobility"
            >Automotive, Logistics, &amp; Mobility</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/b2b-platforms"
            >B2B Platforms</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/healthcare"
            >Healthcare</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/hub"
            >Streaming data sources</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/ecommerce-and-retail"
            >eCommerce &amp; Retail</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/sports-and-media"
            >Sports &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/gaming">Gaming</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/iot-and-connected-devices"
            >IoT &amp; Connected Devices</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">Developers</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/docs/quick-start-guide"
            >Start in 5 minutes</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/docs">Documentation</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/tutorials">Tutorials</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="https://changelog.ably.com/" class="ui-footer-menu-row-link"
            >Changelog</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/support"
            >Support &amp; FAQs</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/download">SDKs</a>
        </li>
        <li class="p-menu-row-snug flex items-center">
          <a
            class="pr-8 ui-footer-menu-row-link"
            href="https://status.ably.com/"
            >System status</a
          >
          <iframe
            class="w-24 h-24 mt-4"
            src="https://status.ably.com/embed/icon"
            allowtransparency="true"
            frameborder="0"
            scrolling="no"
          ></iframe>
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">WHY ABLY</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/customers">Customers</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/case-studies"
            >Case Studies</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/four-pillars-of-dependability"
            >Four Pillars of Dependability</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/compare"
            >Compare our tech</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/protocols"
            >Multi protocol support</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/integrations"
            >Third-party integrations</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full xs:col-span-3 lg:col-span-1">
      <h2 class="ui-footer-col-title">ABOUT</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/about">About Ably</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/pricing">Pricing</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/blog">Blog</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/careers">Careers</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/open-policy"
            >Open protocol policy</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/press-center"
            >Press &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/contact">Contact us</a>
        </li>
      </ul>
    </div>
  </div>
  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>
  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 grid ui-grid-gap ui-grid-px sm:grid-cols-2"
  >
    <div class="">
      <div
        class="flex flex-col lg:flex-row flex-auto ml-8 sm:col-span-1 lg:col-span-2"
      >
        <div class="">
          <div class="flex items-center pb-24">
            <a
              class="h-24 pr-24 text-cool-black hover:text-icon-twitter"
              href="https://twitter.com/ablyrealtime"
              title="Ably on Twitter"
            >
              <svg class=" " style="width: 1.5rem; height: 1.5rem">
                <use xlink:href="#sprite-twitter"></use>
              </svg>
            </a>
            <a
              class="h-24 pr-24 text-cool-black hover:text-icon-linkedin"
              href="https://www.linkedin.com/company/ably-realtime"
              title="Ably on LinkedIn"
            >
              <svg class=" " style="width: 1.5rem; height: 1.5rem">
                <use xlink:href="#sprite-linkedin"></use>
              </svg>
            </a>
            <a
              class="h-24 pr-24 text-cool-black hover:text-icon-github"
              href="https://github.com/ably/"
              title="Ably on Github"
            >
              <svg class=" " style="width: 1.5rem; height: 1.5rem">
                <use xlink:href="#sprite-github"></use>
              </svg>
            </a>
            <a
              class="h-24 pr-24 text-cool-black hover:text-icon-discord"
              href="https://discord.gg/jwBPhEZ9g5"
              title="Ably on Discord"
            >
              <svg class=" " style="width: 1.5rem; height: 1.5rem">
                <use xlink:href="#sprite-discord"></use>
              </svg>
            </a>
          </div>
        </div>
        <div class="xs:hidden sm:block ui-footer-glassdoor">
          <div
            class="flex sm:pt-24 lg:pt-0 sm:border-t sm:border-l-0 lg:border-t-0 lg:border-l sm:border-mid-grey sm:w-3/4 lg:w-full lg:pl-24"
          >
            <a
              href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
              class="h-24 text-cool-black hover:text-icon-glassdoor"
              title="Ably reviews on glassdoor"
            >
              <svg class=" " style="width: 1.5rem; height: 1.5rem">
                <use xlink:href="#sprite-glassdoor"></use>
              </svg>
            </a>
            <div class="pl-16 text-menu3 font-light">
              <strong class="block font-medium">We're hiring!</strong>
              <a
                href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
                class="ui-footer-link"
              >
                Learn more at Glassdoor
              </a>
            </div>
          </div>
        </div>
      </div>
      <div class="xs:block sm:hidden">
        <div class="border-t border-mid-grey w-full"></div>
        <div class="flex py-24">
          <a
            class="h-24 pr-24 text-cool-black hover:text-icon-glassdoor"
            href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
            title="Ably reviews on glassdoor"
          >
            <svg class=" " style="width: 1.5rem; height: 1.5rem">
              <use xlink:href="#sprite-glassdoor"></use>
            </svg>
          </a>
          <div class="text-menu3 font-light">
            <strong class="block font-medium">We're hiring!</strong>
            <a
              href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
              class="ui-footer-link"
            >
              Learn more at Glassdoor
            </a>
          </div>
        </div>
      </div>
    </div>
    <div class="col-span-full sm:col-span-1 inline-flex sm:ml-auto">
      <img
        alt="Highest User Adoption 2022"
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/highest-user-adoption-2022-b3cbeb5fa43cab3c21df256f644f88bf16b628b2ff4f04e54b5c9ef0260dd315.png"
      />
      <img
        alt="Users Love Us"
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/users-love-us-2022-1c82775859c473f3e7a2faade55ffade3d9fd78d522f3e15ef2f4aa843f07ada.png"
      />
      <img
        alt="High Performer 2022"
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/high-performer-2022-eae68980f68e8fc65a310e6ca80cee47c4e92e039bb2feb036f713ea9b9839b2.png"
      />
    </div>
  </div>
  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>
  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 md:grid md:grid-cols-2 ui-grid-gap ui-grid-px "
  >
    <div class="flex flex-col flex-auto pb-40 ml-8 col-span-full md:col-span-1">
      <div class="inline-flex">
        <a class="pr-24 ui-footer-link" href="/privacy">Cookies</a>
        <a class="pr-24 ui-footer-link" href="/legals">Legals</a>
        <a class="pr-24 ui-footer-link" href="/data-protection"
          >Data Protection</a
        >
        <a class="ui-footer-link" href="/privacy">Privacy</a>
      </div>
    </div>
    <div class="xs:grid xs:grid-cols-2 sm:grid-cols-4 xs:pl-16 md:pl-0 ">
      <div class="flex mr-24">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">SOC 2 Type 2</p>
          <p class="ui-footer-compliance-text font-light mb-24">Certified</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-2">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">HIPAA</p>
          <p class="ui-footer-compliance-text font-light mb-24">Compliant</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-3">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">EU GDPR</p>
          <p class="ui-footer-compliance-text font-light mb-24">Certified</p>
        </div>
      </div>
      <div class="flex mr-24 sm:col-start-4">
        <svg
          class="text-active-orange bg-white rounded-full mr-12"
          style="width: 1.5rem; height: 1.5rem"
        >
          <use xlink:href="#sprite-icon-gui-tick"></use>
        </svg>
        <div>
          <p class="ui-footer-compliance-text font-medium">256-bit AES</p>
          <p class="ui-footer-compliance-text font-light mb-24">Encryption</p>
        </div>
      </div>
    </div>
  </div>
</footer>
`;
